feat: added swagger annotation for users handlers
