# internal/handler/userHandler.go
@@ -40,6 +40,13 @@ func (h *Handler) userHandler(c *gin.Context) {
 	}
 }
 
+// registrationUser godoc
+// @Summary Render the registration page and redirect to registration page with html
+// @Description Render the template to register a new user.
+// @Tags users
+// @Accept  json
+// @Produce  html
+// @Router /registrationUser [get]
 func (h *Handler) registrationUser(c *gin.Context) {
 	log.Println("*****registrationUser running*****")
 	err := h.tpl.ExecuteTemplate(c.Writer, "registration.html", nil)
@@ -48,6 +55,19 @@ func (h *Handler) registrationUser(c *gin.Context) {
 		return
 	}
 }
+
+// createUser godoc
+// @Summary Create a new user
+// @Description Create a new user with the provided username, password, and email.
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param username formData string true "Username"
+// @Param password formData string true "Password"
+// @Param email formData string true "Email"
+// @Success 201 {object} string "User created successfully"
+// @Failure 500 {object} string "Internal Server Error"
+// @Router /createUser [post]
 func (h *Handler) createUser(c *gin.Context) {
 	fmt.Println("*****registerAuthHandler running*****")
 	username := c.PostForm("username")
@@ -66,6 +86,13 @@ func (h *Handler) createUser(c *gin.Context) {
 	h.login(c)
 }
 
+// login godoc
+// @Summary Render the login page
+// @Description Render the template to login a user
+// @Tags users
+// @Accept  json
+// @Produce  html
+// @Router /login [get]
 func (h *Handler) login(c *gin.Context) {
 	log.Println("*****login running*****")
 	err := h.tpl.ExecuteTemplate(c.Writer, "login.html", nil)
@@ -74,6 +101,19 @@ func (h *Handler) login(c *gin.Context) {
 		return
 	}
 }
+
+// loginUser godoc
+// @Summary Login a user
+// @Description Authenticate a user with the provided username and password.
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param username formData string true "Username"
+// @Param password formData string true "Password"
+// @Success 200 {object} string "Login successful"
+// @Failure 400 {object} string "Invalid username or password"
+// @Failure 500 {object} string "Internal Server Error"
+// @Router /loginUser [post]
 func (h *Handler) loginUser(c *gin.Context) {
 	fmt.Println("*****loginUser running*****")
 	username := c.PostForm("username")
@@ -127,9 +167,7 @@ func (h *Handler) loginUser(c *gin.Context) {
 
 func (h *Handler) Validate(c *gin.Context) {
 	user, _ := c.Get("user")
-
 	// user.(models.User).Email    -->   to access specific data
-
 	c.JSON(http.StatusOK, gin.H{
 		"message": user,
 	})
